
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
   <include
       android:id="@+id/ll_main"
       layout="@layout/title_head"
       ></include>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/light_gray"
            ></View>
    <RadioGroup
        android:id="@+id/rg_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            style="@style/radion_button_style"
            android:text="@string/home"
            android:drawableTop="@drawable/radion_button_home" />

        <RadioButton
            style="@style/radion_button_style"
            android:text="@string/message"
            android:drawableTop="@drawable/radion_button_mes" />

        <RadioButton
            android:text="@string/friends"
            style="@style/radion_button_style"
            android:drawableTop="@drawable/radion_button_friedns" />

        <RadioButton
            android:text="@string/dynamic"
            style="@style/radion_button_style"
            android:drawableTop="@drawable/radion_button_dynamic"
            />
        <RadioButton
            android:text="@string/more"
            style="@style/radion_button_style"
            android:drawableTop="@drawable/radion_button_more"
            />
    </RadioGroup>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@id/ll_main"
        android:layout_alignTop="@id/ll_bottom"
        ></FrameLayout>
</RelativeLayout>

   <android.support.design.widget.NavigationView
    android:id="@+id/navigation"
    android:layout_gravity="start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:headerLayout="@layout/drawer_header"
    app:menu="@menu/drawer_menu"/>

</android.support.v4.widget.DrawerLayout>
